--- a/03.1-data-pasien-baru.html
+++ b/03.1-data-pasien-baru.html
@@ -5,8 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Baru</title>
+    <link rel="stylesheet" href="style-databaru.css">
 </head>
 <body>
+    <div class="data-box">
+        <h1>Tambah Data Pasien</h1>
+
+        <div class="data-textbox">
+            <label for="Nama">Nama</label><br>
+            <input type="text" id="Nama" placeholder="Steven Makuri" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <label for="NIK">NIK</label><br>
+            <input type="text" id="NIK" placeholder="000000001281" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <label for="TL">Tanggal Lahir</label><br>
+            <input type="date" id="TL" placeholder="01/01/01" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <label for="Alamat">Alamat</label><br>
+            <input type="text" id="Alamat" placeholder="Jln. Bojongsoang Raya No.3" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <ul id="list-textbox1">
+                <li id="RTRW">
+                    <label for="RT">RT</label><br>
+                    <input type="text" id="RT" placeholder="004" name="" value="">
+                </li>
+
+                <li id="RTRW">
+                    <label for="RW">RW</label><br>
+                    <input type="text" id="RW" placeholder="004" name="" value="">
+                </li>
+
+                <li id="RTRWLAST"> 
+                    <label for="Kode-Pos">Kode Pos</label><br>
+                    <input type="text" id="Kode-Pos" placeholder="40267" name="" value="">
+                </li>
+            </ul>
+        </div>
+
+        <div class="data-textbox">
+            <ul id="list-textbox2">
+                <li id="RTRW">
+                    <label for="Kota">Kota/Kabupaten</label><br>
+                    <input type="text" id="Kota" placeholder="Kab.Bandung" name="" value="">
+                </li>
+
+                <li id="RTRWLAST">
+                    <label for="Provinsi">Provinsi</label><br>
+                    <input type="text" id="Provinsi" placeholder="Jawa Barat" name="" value="">
+                </li>
+            </ul>
+        </div>
+
+        <div class="data-textbox">
+            <label for="Goldar">Golongan Darah</label><br>
+            <input type="text" id="Goldar" placeholder="O" name="" value="">
+        </div>
+
+
+    </div>
     
 </body>
 </html>
