--- a/04.1-data-asuransi-baru.html
+++ b/04.1-data-asuransi-baru.html
@@ -5,8 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Baru</title>
+    <link rel="stylesheet" href="style-databaru.css">
 </head>
 <body>
+    <div class="data-box">
+        <h1>Tambah Data Asuransi</h1>
+
+        <div class="data-textbox">
+            <label for="Nama-Asuransi">Nama Asuransi</label><br>
+            <input type="text" id="Nama-Asuransi" placeholder="PT MANULIFE SENTAUSA" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <label for="No-Asuransi">No. Asuransi</label><br>
+            <input type="text" id="No-Asuransi" placeholder="000000001281" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <label for="Nama-Pemilik">Nama Pemilik Asuransi</label><br>
+            <input type="text" id="Nama-Pemilik" placeholder="Steve Markurius" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <label for="TL-Asuransi">Tanggal Lahir</label><br>
+            <input type="date" id="TL-Asuransi" placeholder="01/01/01" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <label for="Alamat-Asuransi">No. Asuransi</label><br>
+            <input type="text" id="No-Asuransi" placeholder="000000001281" name="" value="">
+        </div>
+
+        <div class="data-textbox">
+            <ul id="list-textbox2">
+                <li id="RTRW">
+                    <label for="Kota">Kota/Kabupaten</label><br>
+                    <input type="text" id="Kota" placeholder="Kab.Bandung" name="" value="">
+                </li>
+
+                <li id="RTRWLAST">
+                    <label for="Provinsi">Provinsi</label><br>
+                    <input type="text" id="Provinsi" placeholder="Jawa Barat" name="" value="">
+                </li>
+            </ul>
+        </div>
+
+        <div class="tombol-selesai">
+            <button onclick="window.location.href='./04-asuransi.html'" type="button" class="login-button">
+                <span class="button__text"> Selesai!</span>
+            </button>
+        </div>
+
+
+
+    </div>
     
 </body>
 </html>
